# original

MyCpp/: CMakeLists.txt
MyCpp/07_project/calc/: CMakeLists.txt  calculator.cpp
MyCpp/07_project/name_age/: CMakeLists.txt  nameagetestin.txt  para.cpp
MyCpp/08_project/vec/: CMakeLists.txt
MyCpp/lib/calc/: Token.h  token.cpp
MyCpp/lib/vec/: vec2d.cpp
